--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run dev",
     "serve": "npm run build && npm run preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
